--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ language: ruby
 
 services:
   - docker
+env:
+  global:
+    - COMMIT=${TRAVIS_COMMIT::8}
+    - REPO=mskj/maven-builder
 
 script:
   - wget https://github.com/buildpack/pack/releases/download/v0.5.0/pack-v0.5.0-linux.tgz
   - tar xvf pack-v0.5.0-linux.tgz
   - rm pack-v0.5.0-linux.tgz
-  - ./pack create-builder mskj/maven-builder:latest -b builder.toml
+  - ./pack create-builder ${REPO}:${COMMIT} -b builder.toml
   - rm pack
 deploy:
   provider: script
