--- a/java11-builder.toml
+++ b/java11-builder.toml
@@ -9,4 +9,4 @@
   id = "mskj.cmbc.com.cn.java11"
   build-image = "mskj/java11-maven:latest"
   run-image = "mskj/java11-base:latest"
-  run-image-mirrors = ["harbor-ver.mstech.com.cn","harbor-dev.mstech.com.cn"]
+  run-image-mirrors = ["harbor-ver.mstech.com.cn/mskj/java11-base","harbor-dev.mstech.com.cn/mskj/java11-base"]
