--- a/java8-builder.toml
+++ b/java8-builder.toml
@@ -9,4 +9,4 @@
   id = "mskj.cmbc.com.cn.java8"
   build-image = "mskj/java8-maven:latest"
   run-image = "mskj/java8-base:latest"
-  run-image-mirrors = ["harbor-ver.mstech.com.cn","harbor-dev.mstech.com.cn"]
+  run-image-mirrors = ["harbor-ver.mstech.com.cn/mskj/java8-base","harbor-dev.mstech.com.cn/mskj/java8-base"]
