--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
-    - REPO=mskj/maven-builder
+    - REPO=mskj/buildpack-maven-builder
 
 script:
   - wget https://github.com/buildpack/pack/releases/download/v0.5.0/pack-v0.5.0-linux.tgz
