--- a/java11-builder.toml
+++ b/java11-builder.toml
@@ -14,5 +14,5 @@
     version = "0.0.1"
 [stack]
   id = "mskj.cmbc.com.cn.java11"
-  build-image = "mskj/java11-maven:latest"
+  build-image = "mskj/java11-builder-base:latest"
   run-image = "mskj/java11-base:latest"
