--- a/java8-builder.toml
+++ b/java8-builder.toml
@@ -8,6 +8,7 @@
   [[order.group]]
     id = "mskj.cmbc.com.cn.buildpacks.java.gradle"
     version = "0.0.1"
+[[order]]
   [[order.group]]
     id = "mskj.cmbc.com.cn.buildpacks.java.maven"
     version = "0.0.1"
