fix build script

--- a/maven-buildpack/bin/build
+++ b/maven-buildpack/bin/build
@@ -56,7 +56,7 @@ else
   echo "entrypoint.sh is not found"
   target_dir=$layersdir/apps/
   for jar_file in $(find "$target_dir" -maxdepth 1 -name "*.jar" -type f); do
-    cat >> $layersdir/launch.toml <<EOL
+    cat > $layersdir/launch.toml <<EOL
 [[processes]]
 type = "web"
 command = "java -jar ${jar_file}"
