--- a/java11-builder.toml
+++ b/java11-builder.toml
@@ -16,3 +16,5 @@
   id = "mskj.cmbc.com.cn.java11"
   build-image = "mskj/java11-builder-base:latest"
   run-image = "mskj/java11-base:latest"
+[lifecycle]
+  version="0.5.0"
