Upgrade buildpack lifecycle version from 0.5.0 to 0.6.1

--- a/maven-buildpack/bin/build
+++ b/maven-buildpack/bin/build
@@ -26,6 +26,8 @@ cat >$layersdir/cache/settings.xml <<EOF
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
                       https://maven.apache.org/xsd/settings-1.0.0.xsd">
+
+<localRepository>/root/.m2/repository</localRepository>
 <mirrors>
     <mirror>
       <id>mskj</id>  
@@ -37,7 +39,7 @@ cat >$layersdir/cache/settings.xml <<EOF
 </settings>
 EOF
 cat $layersdir/cache/settings.xml
-ln -s $layersdir/cache/ $HOME/.m2
+ln -s /root/.m2 $HOME/.m2
 
 echo "building app jars"
 cd $sub_dir
